--- a/SDL_cs.csproj
+++ b/SDL_cs.csproj
@@ -16,4 +16,8 @@
     <NoWarn>1701;1702;SYSLIB1054;</NoWarn>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="src\SDL\___CLEANING\" />
+  </ItemGroup>
+
 </Project>
