--- a/SDL_cs.csproj
+++ b/SDL_cs.csproj
@@ -6,18 +6,19 @@
     <Nullable>enable</Nullable>
     <Platforms>x64</Platforms>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <AppDesignerFolder>properties</AppDesignerFolder>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <NoWarn>1701;1702;SYSLIB1054;</NoWarn>
+    <NoWarn>1701;1702;CA1401;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <NoWarn>1701;1702;SYSLIB1054;</NoWarn>
+    <NoWarn>1701;1702;CA1401;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="src\SDL\___CLEANING\" />
+    <Folder Include="src\SDL\___TOCLEAN\pen\" />
   </ItemGroup>
 
 </Project>
