added documentation for already cleaned-up properties

--- a/SDL_cs.csproj
+++ b/SDL_cs.csproj
@@ -18,7 +18,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="src\SDL\___CLEANING\" />
+    <Folder Include="src\SDL\___CLEANED\blendmode\classes\" />
+    <Folder Include="src\SDL\___CLEANING\video\enums\" />
     <Folder Include="src\SDL\___TOCLEAN\pen\" />
   </ItemGroup>
 
