--- a/SDL_cs.csproj
+++ b/SDL_cs.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="src\SDL\___TOCLEAN\pen\" />
+    <Folder Include="src\SDL\___CLEANING\" />
   </ItemGroup>
 
 </Project>
