--- a/SDL_cs.csproj
+++ b/SDL_cs.csproj
@@ -17,4 +17,8 @@
     <NoWarn>1701;1702;CA1401;</NoWarn>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="src\SDL\___TOCLEAN\" />
+  </ItemGroup>
+
 </Project>
