replaced parameters with in modifier to ref + small fixes in documentation
'in' is not required in method calls, so you can accidentally pass parameters by value where the method expects a reference (a constant reference)

--- a/SDL_cs.csproj
+++ b/SDL_cs.csproj
@@ -7,6 +7,7 @@
     <Platforms>x64</Platforms>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <AppDesignerFolder>properties</AppDesignerFolder>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
