--- a/SDL_cs.csproj
+++ b/SDL_cs.csproj
@@ -7,7 +7,7 @@
     <Platforms>x64</Platforms>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <AppDesignerFolder>properties</AppDesignerFolder>
-    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <RootNamespace>SDL3</RootNamespace>
   </PropertyGroup>
 
